--- a/css/header.css
+++ b/css/header.css
@@ -2,20 +2,14 @@
 @media (min-width: 320px) {
 
     header {
-        min-width: 288px;
+        min-width: 320px;
         height: 500px;
-        padding-left: 16px;
-        padding-right: 16px;
-        /*   background-image: url("../img/header__back--mobile.jpg");
-           background-repeat: no-repeat;
-           background-position: center;
-           */
         background-color: #0D0D0D;
     }
 
-
     .logo--header {
         padding-top: 20px;
+        padding-left: 16px;
         margin-bottom: 30px;
     }
 
@@ -30,8 +24,9 @@
     }
 
     .nav-list {
-        width: 308px;
-        padding-left: 14px;
+        width: 304px;
+        padding-left: 16px;
+        padding-top: 10px;
         position: absolute;
         top: 84px;
         left: -338px;
@@ -44,6 +39,7 @@
         /*flex-basis: 100%;*/
         visibility: visible;
         left: 0;
+
     }
 
     .nav-list__item {
@@ -105,6 +101,13 @@
         color: #858585;
     }
 
+
+    .header-text{
+        padding-right: 16px;
+        padding-left: 16px;
+        width: 288px;
+    }
+
 }
 
 /*-----------------------------NAV BTN STYLE----------------------------*/
@@ -112,8 +115,9 @@
 .nav-btn {
     display: block;
     width: 38px;
-    margin-left: auto;
     height: 38px;
+    margin-left: auto;
+    margin-right: 16px;
     cursor: pointer;
     border: none;
     background: rgba(13, 13, 13, 0.5);
@@ -210,6 +214,7 @@
         left: 0;
         padding-left: 250px;
     }
+
 
 }
 
