--- a/css/style.css
+++ b/css/style.css
@@ -15,9 +15,7 @@ button{
 }
 
 .margin-auto{
-    width: 288px;
-    padding-left: 16px;
-    padding-right: 16px;
+    width: 320px;
     margin: 0 auto;
 }
 .background--black{
